# zakaz

./: .gitignore  LICENSE
.claude/: settings.local.json
shared/mailbox_processor/: Cargo.toml
shared/mailbox_processor/src/: lib.rs
zakaz/: CLAUDE.md  Cargo.toml  app-goal-transition.md  app-goal.md
zakaz/.claude/: settings.local.json
zakaz/.claude/commands/: commit.md  consolidate-imports.md
zakaz/docs/: types.md
zakaz/src/: error.rs  main.rs
zakaz/src/charts/: candlestick.rs  mod.rs  theme.rs  types.rs  viewport.rs
zakaz/src/db/: database.rs  mod.rs  models.rs  schema.rs
zakaz/src/ib/: client.rs  messages.rs  mod.rs  orders.rs  position_sizing.rs  types.rs
zakaz/src/system/: chart_handler.rs  event.rs  ib_handler.rs  log.rs  macros.rs  mailbox.rs  mod.rs  runtime.rs  state.rs  types.rs
zakaz/src/ui/: mod.rs  ui_binds.rs  ui_message_handler.rs
zakaz/ui/: main_window.slint
zakaz/ui/components/: chart-view.slint  z-tabs-bottom.slint  z-tabs.slint
