[package]
name = "zakaz"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.12"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", features = ["executor"] }
log = "0.4"
simplelog = "0.12"
thiserror = "1.0"
mailbox_processor = { path = "../shared/mailbox_processor" }
ibapi = "1.2.2"
uuid = { version = "1.11", features = ["v4", "serde"] }
time = { version = "0.3", features = ["macros"] }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "bitmap_backend", "chrono"] }
image = "0.24"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }

[build-dependencies]
slint-build = "1.12"
